# timesurfer

./: CLAUDE.md  README.md  main.py  pyproject.toml
requirements/: product-spec.md
src/time_surfer/: __init__.py  cli.py  formatting.py  models.py  storage.py  tracker.py
tests/: conftest.py  test_cli.py  test_formatting.py  test_models.py  test_storage.py  test_tracker.py
