[project]
name = "time-surfer"
version = "0.1.0"
description = "A time tracking app for the command line"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
time-surfer = "time_surfer.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/time_surfer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
